Change in index.html

--- a/pruebas-proyecto/git api/vuejs/index.html
+++ b/pruebas-proyecto/git api/vuejs/index.html
@@ -15,7 +15,7 @@
         <!-- para cuando hace las busquedas -->
         <ol>
             <!-- v-for repo identifica a repos -->
-            <li v-for="repo in repos">{{repo}}</li>
+            <li v-for="repo in repos">{{repo.name}}</li>
         </ol>
     </div>
 
