--- a/pruebas-proyecto/git api/js/index.html
+++ b/pruebas-proyecto/git api/js/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Github api js</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
     
@@ -19,9 +20,7 @@
                     </div>
                     <div class="main__input-container">
                         <input type="text" id="seach" class="main__input" placeholder="Enter a user">
-                        <span>
-                            <a class="btn btn-shallow searchButton">Seach</a>
-                        </span>
+                        <button class="btn btn-shallow searchButton">Seach</button>
                     </div>
                 </div>
             </div>
@@ -51,4 +50,5 @@
     </main>
 
 </body>
+<script src="app.js"></script>
 </html>
